--- a/frontend/hr-view/styles/hrstudentProfile.css
+++ b/frontend/hr-view/styles/hrstudentProfile.css
@@ -432,7 +432,7 @@
     /* border: 1px solid palevioletred; */
     display: flex;
     /* align-items: center; */
-    font-size: 24px;
+    font-size: 20px;
     font-family: Nunito Sans;
     font-weight: 600;
 }
@@ -669,6 +669,124 @@
 
 .customRadio input[type="radio"]:checked+.radioCircle::after {
     display: block;
+}
+
+.durationContain {
+    height: 100%;
+    width: 100%;
+    /* border: 1px solid red; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #FFFFFF;
+}
+
+.NameFieldContain3 {
+    height: 48px;
+    width: 50%;
+    border: 1px solid #F5F5F5;
+    border-radius: 4px;
+    display: flex;
+    background-color: #FFFFFF;
+    margin-top: 1vh;
+    padding-left: 1vh;
+    gap: 1vh;
+}
+
+.NameFieldText3 {
+    height: 100%;
+    width: auto;
+    /* border: 1px solid purple; */
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    color: #9A9A9A;
+    font-family: Nunito Sans;
+    font-weight: 500;
+    font-size: 16px;
+    user-select: none;
+    background-color: #FFFFFF;
+}
+
+.NameFieldInput3 {
+    height: 100%;
+    width: 75%;
+    /* border: 1px solid black; */
+    background-color: #FFFFFF;
+}
+
+.NameFieldInput3 input {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    font-family: Nunito Sans;
+    font-weight: 400;
+    font-size: 16px;
+    cursor: default;
+    background-color: #FFFFFF;
+}
+
+.NameFieldContain4 {
+    height: 48px;
+    width: 49%;
+    border: 1px solid #F5F5F5;
+    border-radius: 4px;
+    display: flex;
+    background-color: #FFFFFF;
+    margin-top: 1vh;
+    padding-left: 1vh;
+    gap: 1vh;
+}
+
+.NameFieldText4 {
+    height: 100%;
+    width: auto;
+    /* border: 1px solid purple; */
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    color: #9A9A9A;
+    font-family: Nunito Sans;
+    font-weight: 500;
+    font-size: 16px;
+    user-select: none;
+    background-color: #FFFFFF;
+}
+
+.NameFieldInput4 {
+    height: 100%;
+    width: 60%;
+    /* border: 1px solid black; */
+    background-color: #FFFFFF;
+}
+
+.NameFieldInput4 input[type="date"] {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    font-family: Nunito Sans;
+    font-weight: 400;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #FFFFFF;
+    color: #333;
+}
+
+.NameFieldInput4 input[type="date"]::-webkit-input-placeholder {
+    color: #9A9A9A;
+    opacity: 1;
+}
+
+.NameFieldInput4 input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(34%) sepia(94%) saturate(362%) hue-rotate(116deg) brightness(92%) contrast(92%);
+    cursor: pointer;
+}
+
+.NameFieldInput4 input[type="date"]:focus {
+    background-color: #F5F5F5;
+    border-radius: 4px;
 }
 
 .caretdown {
