Refactor code structure for improved readability and maintainability

--- a/frontend/supervisor-view/styles/homeListView.css
+++ b/frontend/supervisor-view/styles/homeListView.css
@@ -50,8 +50,8 @@ html, body {
   display: flex;
 }
 
-/* Signout Section */
-.signout {
+/* Logout Section */
+.logout {
   height: 2rem;
   width: auto;
   display: flex;
