--- a/frontend/staff-view/styles/studentProfile.css
+++ b/frontend/staff-view/styles/studentProfile.css
@@ -114,7 +114,7 @@
 
 .photoNname{
     height: 221px;
-    width: 35%;
+    width: 40%;
     display: flex;
     /* justify-content: space-between; */
     align-items: center;
@@ -136,7 +136,7 @@
 .photoBox{
     height: 174px;
     width: 100%;
-    /* background-color: white; */
+    background-color: black;
 }
 
 .photoBox img{
@@ -190,7 +190,7 @@
 
 .nameInterest{
     height: 90px;
-    width: 40%;
+    width: 60%;
     /* border: 1px solid black; */
     display: flex;
     flex-direction: column;
@@ -202,7 +202,7 @@
     width: 100%;
     /* background-color: blue; */
     font-family: Nunito Sans;
-    font-size: 32px;
+    font-size: 28px;
     font-weight: 400;
     display: flex;
     align-items: center;
@@ -343,9 +343,11 @@
     /* border: 1px solid palevioletred; */
     display: flex;
     /* align-items: center; */
-    font-size: 24px;
+    font-size: 20px;
     font-family: Nunito Sans;
     font-weight: 600;
+    word-break: break-word;
+    overflow-wrap: break-word;
 }
 
 @media screen and (max-width:450px) {
